refactor(s3): remove env var fallbacks, require credentials via model operand
Complete the file adapter credential refactoring to match govdata pattern:
- S3StorageProvider: remove no-arg constructor and env var fallbacks, fail
  fast when accessKeyId/secretAccessKey missing from config
- StorageProviderFactory: throw on credentialless S3 creation
- FileSource: prefer injected StorageProvider for S3 credentials
- DuckDBJdbcSchemaFactory: remove AWS env var fallback lines
- S3HivePipelineTracker: remove configOrEnv helper, config-only
- PipelineTrackerFactory: remove AWS endpoint env var fallback
- FileSchemaFactory: add fail-fast S3 credential validation
- Update tests to match new behavior
- Improve parallel worker scripts

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>